@@ -2,7 +2,7 @@
  * Read in the file, and grant ownerships to whoever has the lock.
  */
 
-#include "../config.h"
+#include "../../_pam_aconf.h"
 #include <errno.h>
 #include <glib.h>
 #include <pwd.h>
@@ -15,6 +15,7 @@
 #include <fcntl.h>
 #include <unistd.h>
 #include <stdio.h>
+#define STATIC static
 #include "pam_console.h"
 
 #include <security/_pam_macros.h>
@@ -25,7 +26,7 @@ static char consolelock[PATH_MAX] = LOCKDIR "/console.lock";
 static char consoleperms[PATH_MAX] = "/etc/security/console.perms";
 static int debug = 0;
 
-void *
+static void *
 _do_malloc(size_t req)
 {
 	void *ret;
@@ -34,7 +35,7 @@ _do_malloc(size_t req)
 	return ret;
 }
 
-void
+static void
 _pam_log(int err, int debug_p, const char *format, ...)
 {
 	va_list args;
@@ -105,3 +106,11 @@ main(int argc, char **argv)
 return_error:
 	return 1;
 }
+
+/* supporting functions included from other .c files... */
+
+#include "regerr.c"
+#include "chmod.c"
+#include "modechange.c"
+#include "config.lex.c"
+#include "config.tab.c"
