@@ -10,3 +10,4 @@ without autoconf support.
 * pam_localuser, pam_succeed_if, pam_xauth are no longer developed here
   - they were accepted to upstream Linux PAM repository
 * Applied fixes by Steve Grubb (tmraz)
+* pam_console: Changed the console.lock file to console/console.lock
